# SymbolGenerator

./: CMakeLists.txt  LICENSE  README.md
ExampleFilter/: CMakeLists.txt  filter.cpp
SymbolGenerator/: CMakeLists.txt  argument_parser.hpp  coff_utils.hpp  defs.hpp  legacy.hpp  logger.hpp  main.cpp  rule_cache.hpp  translation_unit_processor.cpp  translation_unit_processor.hpp  unexported_symbol_filters.cpp  unexported_symbol_filters.hpp  utility.cpp  utility.hpp
cmake/: create_target.cmake  utility.cmake
cmake/profiles/: gcclike_common.cmake
dependencies/: conanfile.txt
